[tool.poetry]
name = "carrier-owl-cond-mat"
version = "0.1.0"
description = ""
authors = ["acd1034 <48613285+acd1034@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
slackweb = "^1.0.5"
lxml = "^4.9.0"
PyYAML = "^6.0"
beautifulsoup4 = "^4.11.1"
selenium = "^3.141.0"
webdriver-manager = "^3.7.0"
arxiv = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
